Prevent overflow in ie

--- a/resources/assets/less/bem/forum-topic-headernav.less
+++ b/resources/assets/less/bem/forum-topic-headernav.less
@@ -38,6 +38,7 @@
   }
 
   &__content {
+    flex: 1;
     min-width: 0;
     display: flex;
     flex-direction: column;
